# llm-council

./: .env.example  .gitignore  FEATURES.md  README.md  RUN.md  pyproject.toml
backend/: config.py  council.py  database.py  main.py  memory.py  models.py  storage.py  tools.py
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage3.css  Stage3.jsx
