[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-toon>=0.1.0",
    "tiktoken>=0.5.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.1.0",          # MySQL
    # Feature 4: LangChain Core
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    # Feature 4: FREE Tools
    "wikipedia>=1.4.0",
    "arxiv>=2.0.0",
    "duckduckgo-search>=4.0.0",
    "ddgs>=1.0.0",
    "yfinance>=0.2.0",
    # Feature 4: PAID Tools (optional)
    "tavily-python>=0.2.0",
    # Feature 4: Memory (local embeddings - FREE)
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
